k8s/cd/capi/argocd-routes/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-routes
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
      app.kubernetes.io/instance: argocd
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            k8s:app.kubernetes.io/name: envoy
            k8s:app.kubernetes.io/component: proxy
            k8s:gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway
